Fix management page
This fixes the buttons, the flashes, and some taskqueue daemon config
that got lost in the flask conversion

re #915 (0.5)

--- a/npactflask/npactflask/templates/management.html
+++ b/npactflask/npactflask/templates/management.html
@@ -11,6 +11,19 @@
 {%block content %}
 <div class="contentPadding">
   <h2>NPACT - Management</h2>
+  <div id="msgpane" class="ui-corner-all">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="message">
+      <p class="ui-state-highlight ui-corner-all ui-state-error">
+        {{ message }}</p>
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+  </div>
+
   <form  method="POST">
     <h3>Taskqueue daemon</h3>
     <div>
@@ -30,7 +43,7 @@
       <p>This needs to be done from time to time to help prevent disk space usage from going crazy</p>
       <p>
         <label>Cleanup files older than:
-          <input type="text" name="days" size="2" value="{{ app.config['ATIME_DEFAULT']}}"/> days.
+          <input type="text" name="days" size="2" value="{{ default_atime }}"/> days.
         </label>
         <button type="submit" name="action" value="cleanup">Run Cleanup</button>
       </p>
