--- a/npactflask/npactflask/templates/_includes/search.html
+++ b/npactflask/npactflask/templates/_includes/search.html
@@ -1,14 +1,13 @@
 				<form action="//search.ufl.edu/search" method="get" name="search" id="search">
-		          <label for="source">
-			      <select id="source" name="source" onchange="document.getElementById('searchbox').focus()">
-				    <option value="web" selected="selected">UF Web with Google</option>
-		   		    <option value="phonebook">UF Phonebook</option>
-			      </select>
-		          </label>
-		          <input type="hidden" name="site" value="www.webadmin.ufl.edu" />
-		          <br />
-		          <label for="searchbox">
-			         <input name="query" id="searchbox" type="text" size="20" value="Search" alt="Search" onfocus="select()" />
-		          </label>
-		          <input type="submit" name="Submit" value="Go" />
-	            </form>
+		      <select id="source" class="form-control" name="source" onchange="document.getElementById('searchbox').focus()">
+			    	<option value="web" selected="selected">UF Web with Google</option>
+	   		    <option value="phonebook">UF Phonebook</option>
+		      </select>
+		      <br>
+          <div class="input-group">
+						<input name="query" class="form-control" id="searchbox" type="text" size="20" placeholder="Search" alt="Search" onfocus="select()">
+						<span class="input-group-btn">
+							<button class="btn btn-default btn-search" type="submit" name="Submit">Go</button>
+						</span>
+					</div>
+        </form>
