--- a/npactflask/npactflask/templates/start.html
+++ b/npactflask/npactflask/templates/start.html
@@ -70,13 +70,14 @@ $(document).on('change', '.btn-file :file', function() {
 
   <p class="orange-text">The NPACT server can process uploaded files, files fetched from a url, or
 genbank data pasted directly in. <strong>Only one of the  following is neccessary</strong>.</p>
-    <div id="msgpane" class="ui-corner-all">
+    <div id="msgpane">
        {% with messages = get_flashed_messages() %}
        {% if messages %}
        {% for message in messages %}
        <div class="message">
-          <p class="ui-state-highlight ui-corner-all ui-state-error">
-                               {{ message }}</p>
+          <p class="alert alert-danger">
+            {{ message }}
+          </p>
     </div>
     {% endfor %}
     {% endif %}
@@ -88,17 +89,17 @@ genbank data pasted directly in. <strong>Only one of the  following is neccessar
   </div>
   <hr style="margin-top: 3px; margin-bottom: 10px;">
   <div id="selectors" style="margin-bottom: 15px;">
-    <button class="btn btn-default" data-target="upload" id="btn-upload">Upload a File</button>
-    <button class="btn btn-default" data-target="fetchurl" id="btn-fetchurl">Fetch from URL</button>
-    <button class="btn btn-default" data-target="pastein" id="btn-pastein">Paste in as text</button>
-    <button class="btn btn-default" data-target="search" id="btn-search">Accession Number</button>
+    <button class="btn btn-form" data-target="upload" id="btn-upload">Upload a File</button>
+    <button class="btn btn-form" data-target="fetchurl" id="btn-fetchurl">Fetch from URL</button>
+    <button class="btn btn-form" data-target="pastein" id="btn-pastein">Paste in as text</button>
+    <button class="btn btn-form" data-target="search" id="btn-search">Accession Number</button>
   </div>
   <div id="startforms">
     <div id="form-upload">
       <h2>Step 2: Upload a File</h2>
       <hr style="margin-top: 3px; margin-bottom: 10px;">
       <form method="post" action="" enctype="multipart/form-data">
-        <div class="input-group">
+        <div class="input-group" id="input-file">
           <span class="input-group-btn">
             <span class="btn btn-file">Choose File
               <input id="file" name="file" type="file" title="Select a file for upload">
@@ -107,7 +108,7 @@ genbank data pasted directly in. <strong>Only one of the  following is neccessar
           <input type="text" class="form-control" readonly>
         </div>
         {{emailinput()}}
-        <button type="submit" class="btn btn-default btn-analysis" name="active" value="upload" title="Get the analysis results based on default configuration.">
+        <button type="submit" class="btn btn-form btn-analysis" name="active" value="upload" title="Get the analysis results based on default configuration.">
           <span class="ui-button-text">Start Analysis!</span>
         </button>
       </form>
@@ -120,7 +121,7 @@ genbank data pasted directly in. <strong>Only one of the  following is neccessar
           <input id="fetchurl" class="form-control" name="fetchurl" type="url" value="{{ url }}" style="width: 50%;">
         </label>
         {{emailinput()}}
-        <button type="submit" class="btn btn-default btn-analysis" name="active" value="fetchurl" title="Get the analysis results based on default configuration.">
+        <button type="submit" class="btn btn-form btn-analysis" name="active" value="fetchurl" title="Get the analysis results based on default configuration.">
           <span class="ui-button-text">Start Analysis!</span>
         </button>
       </form>
@@ -131,7 +132,7 @@ genbank data pasted directly in. <strong>Only one of the  following is neccessar
       <form method="post" action="" enctype="multipart/form-data">
         <textarea id="pastein" class="form-control" name="pastein" rows="4" value="{{ pastein }}"></textarea>
         {{emailinput()}}
-        <button type="submit" class="btn btn-default btn-analysis" name="active" value="pastein" title="Get the analysis results based on default configuration.">
+        <button type="submit" class="btn btn-form btn-analysis" name="active" value="pastein" title="Get the analysis results based on default configuration.">
           <span class="ui-button-text">Start Analysis!</span>
         </button>
       </form>
@@ -145,7 +146,7 @@ genbank data pasted directly in. <strong>Only one of the  following is neccessar
         </label>
         {{emailinput()}}
         {% include "start/EntrezSearchForm.html" %}
-        <button type="submit" class="btn btn-default btn-analysis" name="active" value="search" title="Get the analysis results based on default configuration.">
+        <button type="submit" class="btn btn-form btn-analysis" name="active" value="search" title="Get the analysis results based on default configuration.">
           <span class="ui-button-text">Start Analysis!</span>
         </button>
       </form>
