--- a/npactflask/npactflask/templates/processing.html
+++ b/npactflask/npactflask/templates/processing.html
@@ -3,7 +3,7 @@
 
 {% block addScript %}
 <base href="{{base_href}}">
-<script type="text/javascript" src="{{vSTATIC('css/custom-theme/jquery-ui.min.js')}}"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/angular/angular.min.js')}}"></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/angular-cookies/angular-cookies.min.js')}}"></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/konva/konva.min.js')}}" defer></script>
@@ -11,7 +11,6 @@
 <script type="text/javascript" src="{{vSTATIC('bower_components/angular-sanitize/angular-sanitize.min.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/angular-jquery-dialog-service/dialog-service.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/lodash/lodash.min.js')}}" defer></script>
-<script type="text/javascript" src="{{vSTATIC('bower_components/qtip2/jquery.qtip.min.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/rtree/dist/rtree.min.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/ngSticky/dist/sticky.min.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('js/app.js')}}"></script>
