--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css?ver=3.3.5">
     <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/style.css') }}">
 
-    <script src="{{ vSTATIC('bower_components/jquery/dist/jquery.min.js') }}"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ vSTATIC('bower_components/jquery/dist/jquery.min.js') }}"></script>
     {% block addScript %}{% endblock %}
   </head>
   <body ng-app="npact">
