--- a/npactflask/npactflask/templates/processing.html
+++ b/npactflask/npactflask/templates/processing.html
@@ -3,8 +3,9 @@
 
 {% block addScript %}
 <base href="{{base_href}}">
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/angular/angular.min.js')}}"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.1/ui-bootstrap.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.1/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/angular-cookies/angular-cookies.min.js')}}"></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/konva/konva.min.js')}}" defer></script>
 <script type="text/javascript" src="{{vSTATIC('bower_components/angular-messages/angular-messages.min.js')}}" defer></script>
