--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}University of Florida Genetics Institute{% endblock title %}</title>
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css?ver=3.3.5">
     <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/style.css') }}">
-
+    <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/print.css') }}" media="print">
     <script type="text/javascript" src="{{ vSTATIC('bower_components/jquery/dist/jquery.min.js') }}"></script>
     {% block addScript %}{% endblock %}
   </head>
