--- a/npactflask/npactflask/static/css/print.css
+++ b/npactflask/npactflask/static/css/print.css
@@ -2,13 +2,9 @@ body, p, h1, h2, h3, h4, h5, h6, li  {font-family : "Trebuchet MS", verdana, luc
 
 #header, #leftCol, #footer, #printControls, #predictionresults, #progressreport, #results h3, .ui-dialog, div[is-open="status.open"] {display:none;}
 
-#content{width:100%;}
+#content{width:100%; border:none;}
 
-* {
-   border:none;
-   margin:0px;
-   padding:0px;
-}
+.panel{border:none;}
 
 .graph {
    border-bottom: 2px solid #AAF;
