--- a/npactflask/npactflask/static/css/style.css
+++ b/npactflask/npactflask/static/css/style.css
@@ -108,8 +108,11 @@ ul {
     min-height: 376px;
 }
 
-#content h2 { margin:12px 0 15px 8px; }
-#content h3 { /*font-size:125%;  margin:5px 0 0 12px; */}
+#content h2 {
+    font-size: 24px;
+    margin:12px 0 15px 8px;
+}
+
 #content h2 + h3 { margin-top: 2px; }
 
 #content h4 {
@@ -455,7 +458,11 @@ h2 span.qtip-help-icon { float: right; }
     padding: 4px 10px 6px;
 }
 #printControls .ui-icon-print {margin-top: 1px;}
-#printConfirm p {text-align: left; margin-top: 10px;}
+#printConfirm p {
+    font-size: 14px;
+    text-align: left;
+    margin: 10px 10px;
+}
 
 
 .ui-widget-header {
@@ -463,6 +470,14 @@ h2 span.qtip-help-icon { float: right; }
 }
 .ui-front {box-shadow: 0px 1px 8px #000;}
 .ui-front .ui-button {border:none; background: #7084D3;}
+
+#content #progress h2 {
+    margin:12px 0 15px 12px;
+}
+
+#progressreport h3 {
+    margin-left: 12px;
+}
 
 /* Form styles */
 
