--- a/npactflask/npactflask/static/css/style.css
+++ b/npactflask/npactflask/static/css/style.css
@@ -393,7 +393,6 @@ h2 span.qtip-help-icon { float: right; }
     padding: 0px 8px 8px;
 }
 
-#configContainer div {margin-bottom: 12px;}
 #configContainer div.ng-scope {margin-bottom: 5px;}
 
 #configContainer h2 {
@@ -496,6 +495,14 @@ h2 span.qtip-help-icon { float: right; }
 
 .tooltip.ng-isolate-scope.right.customClass {
     width: 300px;
+}
+
+label.track-label{
+   margin: 0px;
+}
+
+checkbox-list#profile-options>label {
+   display: inline-block;
 }
 
 /* DNA Popup */
